--- a/package.json
+++ b/package.json
@@ -8,14 +8,38 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@zeit/next-sass": "^1.0.1",
+    "autoprefixer": "^10.2.6",
+    "axios": "^0.21.1",
+    "classnames": "^2.3.1",
+    "dotenv-webpack": "^7.0.3",
+    "formik": "^2.2.9",
     "next": "latest",
+    "next-compose-plugins": "^2.2.1",
+    "node-sass": "^6.0.0",
+    "nprogress": "^0.2.0",
+    "postcss": "^8.3.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-query": "^3.16.1",
+    "store": "^2.0.12",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "@types/node": "^12.12.21",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/store": "^2.0.2",
+    "@types/webpack-env": "^1.16.0",
+    "@types/yup": "^0.29.11",
+    "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0",
     "typescript": "4.0"
   },
   "license": "MIT"
