--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "formik": "^2.2.9",
     "next": "latest",
     "next-compose-plugins": "^2.2.1",
-    "node-sass": "^6.0.0",
+    "node-sass": "4.14.1",
     "nprogress": "^0.2.0",
     "postcss": "^8.3.0",
     "postcss-flexbugs-fixes": "^5.0.2",
