--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.5",
     "react-query": "^3.16.1",
     "store": "^2.0.12",
+    "styled-components": "^5.3.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
