--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@zeit/next-sass": "^1.0.1",
@@ -16,6 +18,8 @@
     "classnames": "^2.3.1",
     "dotenv-webpack": "^7.0.3",
     "formik": "^2.2.9",
+    "mobx": "^6.3.2",
+    "mobx-react-lite": "^3.2.0",
     "next": "latest",
     "next-compose-plugins": "^2.2.1",
     "node-sass": "4.14.1",
@@ -32,6 +36,11 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
     "@types/classnames": "^2.3.1",
     "@types/node": "^12.12.21",
     "@types/nprogress": "^0.2.0",
