--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/store": "^2.0.2",
+    "@types/styled-components": "^5.1.11",
     "@types/webpack-env": "^1.16.0",
     "@types/yup": "^0.29.11",
     "tslint": "^6.1.3",
