--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.12",
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@material-ui/core": "^4.11.4",
@@ -19,6 +20,7 @@
     "classnames": "^2.3.1",
     "dotenv-webpack": "^7.0.3",
     "formik": "^2.2.9",
+    "graphql": "^15.5.3",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
     "next": "latest",
