--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.5",
+    "react-number-format": "^4.7.3",
     "react-query": "^3.16.1",
+    "react-select": "^5.0.0",
     "recharts": "^2.0.10",
     "store": "^2.0.12",
     "styled-components": "^5.3.0",
