--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@zeit/next-sass": "^1.0.1",
+    "apollo-upload-client": "^16.0.0",
     "autoprefixer": "^10.2.6",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "dotenv-webpack": "^7.0.3",
+    "filesize": "^8.0.6",
     "formik": "^2.2.9",
     "graphql": "^15.5.3",
     "mobx": "^6.3.2",
@@ -47,6 +49,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
     "@babel/plugin-proposal-optional-chaining": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@types/apollo-upload-client": "^14.1.0",
     "@types/classnames": "^2.3.1",
     "@types/node": "^12.12.21",
     "@types/nprogress": "^0.2.0",
