--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@stripe/react-stripe-js": "^1.6.0",
+    "@stripe/stripe-js": "^1.21.1",
     "@zeit/next-sass": "^1.0.1",
     "apollo-upload-client": "^16.0.0",
     "autoprefixer": "^10.2.6",
