--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.1",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.5",
     "react-number-format": "^4.7.3",
@@ -57,6 +58,7 @@
     "@types/node": "^12.12.21",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.2",
+    "@types/react-detect-offline": "^2.4.1",
     "@types/react-dom": "^17.0.1",
     "@types/store": "^2.0.2",
     "@types/styled-components": "^5.1.11",
