--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-detect-offline": "^2.4.5",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.5",
+    "react-intersection-observer": "^8.33.0",
+    "react-loading-skeleton": "^3.0.1",
     "react-number-format": "^4.7.3",
     "react-query": "^3.16.1",
     "react-select": "^5.0.0",
